--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "nodemon": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,9 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^6.7.0",
+    "mongoose": "^6.7.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
